--- a/client/static/textwall.css
+++ b/client/static/textwall.css
@@ -6,7 +6,7 @@ body {
 }
 
 * {
-    font-family: ubuntu mono, monospace, courier new, Courier, special;
+    font-family: Consolas, monospace, courier new, Courier, special;
     -webkit-tap-highlight-color: transparent
 }
 
